# wxModRibbon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
example/: main.cpp  main.rc
include/wxmr/: artprov.h  cmdobserver.h  metroartprov.h  modribbon.h  ribbonframe.h  wxmr.h
src/: metroartprov.cpp  modribbon.cpp  ribbonframe.cpp
